# life_simulation_v1

./: CMakeLists.txt  build.gradle  settings.gradle
.github/workflows/: android.yml
src/: AndroidManifest.xml  main.cpp
